Fix CBUIDropdown.expanded z-index

--- a/javascript/CBUI.css
+++ b/javascript/CBUI.css
@@ -177,7 +177,7 @@
 }
 
 .CBUISectionItem2 > .CBUIDropdown.expanded {
-    z-index: 1000;
+    z-index: 1001;
 }
 
 .CBUISectionItem2 > .CBUIDropdown > .button {
